Remove the add-exports comment it is not needed anymore.